--- a/lxcfs-daemonset.yaml
+++ b/lxcfs-daemonset.yaml
@@ -19,7 +19,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: lxcfs
-        image: registry.cn-hangzhou.aliyuncs.com/denverdino/lxcfs:2.0.8-1
+        image: registry.cn-hangzhou.aliyuncs.com/denverdino/lxcfs:3.0.4
         imagePullPolicy: Always
         securityContext:
           privileged: true
