--- a/lxcfs-image/Dockerfile
+++ b/lxcfs-image/Dockerfile
@@ -1,19 +1,20 @@
 FROM centos:7 as build
+RUN yum -y update
 RUN yum -y install fuse-devel pam-devel wget install gcc automake autoconf libtool make
-ENV LXCFS_VERSION 2.0.8
+ENV LXCFS_VERSION 3.0.4
 RUN wget https://linuxcontainers.org/downloads/lxcfs/lxcfs-$LXCFS_VERSION.tar.gz && \
 	mkdir /lxcfs && tar xzvf lxcfs-$LXCFS_VERSION.tar.gz -C /lxcfs  --strip-components=1 && \
 	cd /lxcfs && ./configure && make
-RUN mkdir /output && cp /lxcfs/lxcfs /output && cp /lxcfs/.libs/liblxcfs.so /output
 
 FROM centos:7
 STOPSIGNAL SIGINT
-ADD start.sh /
-COPY --from=build /output/lxcfs /usr/local/bin/lxcfs
-COPY --from=build /output/liblxcfs.so /usr/local/lib/lxcfs/liblxcfs.so
+COPY --from=build /lxcfs/lxcfs /usr/local/bin/lxcfs
+COPY --from=build /lxcfs/.libs/liblxcfs.so /usr/local/lib/lxcfs/liblxcfs.so
+COPY --from=build /lxcfs/lxcfs /lxcfs/lxcfs
+COPY --from=build /lxcfs/.libs/liblxcfs.so /lxcfs/liblxcfs.so
 COPY --from=build /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2.9.2
 COPY --from=build /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1.0.1
 RUN ln -s /usr/lib64/libfuse.so.2.9.2 /usr/lib64/libfuse.so.2 && \
     ln -s /usr/lib64/libulockmgr.so.1.0.1 /usr/lib64/libulockmgr.so.1
-
+COPY start.sh /
 CMD ["/start.sh"]
